# fastapi-route-generation

./: README.md  main.py  pyproject.toml  services.json
app/: __init__.py  auth.py  config.py  logging_config.py  models.py  openapi.py  proxy.py  routes.py  state.py
